--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,89 @@
 [tox]
-envlist = py27,py32,py33,py34,pypy
+envlist =
+    py27-django16,
+    py27-django17,
+    py32-django16,
+    py32-django17,
+    py33-django16,
+    py33-django17,
+    py34-django16,
+    py34-django17,
+    pypy-django16,
+    pypy-django17
 
 [testenv]
-commands=python setup.py test
+commands={envpython} setup.py test
+
+[testenv:py27-django16]
+basepython = python2.7
+deps = Django~=1.6.0
+commands =
+    {envpython} setup.py test
+    sh tests/run_django16_tests.sh {envpython}
+
+[testenv:py27-django17]
+basepython = python2.7
+deps = Django~=1.7.0
+commands =
+    {envpython} setup.py test
+    sh tests/run_django17_tests.sh {envpython}
+
+
+[testenv:py32-django16]
+basepython = python3.2
+deps = Django~=1.6.0
+commands =
+    {envpython} setup.py test
+    sh tests/run_django16_tests.sh {envpython}
+
+[testenv:py32-django17]
+basepython = python3.2
+deps = Django~=1.7.0
+commands =
+    {envpython} setup.py test
+    sh tests/run_django17_tests.sh {envpython}
+
+
+[testenv:py33-django16]
+basepython = python3.3
+deps = Django~=1.6.0
+commands =
+    {envpython} setup.py test
+    sh tests/run_django16_tests.sh {envpython}
+
+[testenv:py33-django17]
+basepython = python3.3
+deps = Django~=1.7.0
+commands =
+    {envpython} setup.py test
+    sh tests/run_django17_tests.sh {envpython}
+
+
+[testenv:py34-django16]
+basepython = python3.4
+deps = Django~=1.6.0
+commands =
+    {envpython} setup.py test
+    sh tests/run_django16_tests.sh {envpython}
+
+[testenv:py34-django17]
+basepython = python3.4
+deps = Django~=1.7.0
+commands =
+    {envpython} setup.py test
+    sh tests/run_django17_tests.sh {envpython}
+
+
+[testenv:pypy-django16]
+basepython = pypy
+deps = Django~=1.6.0
+commands =
+    {envpython} setup.py test
+    sh tests/run_django16_tests.sh {envpython}
+
+[testenv:pypy-django17]
+basepython = pypy
+deps = Django~=1.7.0
+commands =
+    {envpython} setup.py test
+    sh tests/run_django17_tests.sh {envpython}
